# KaGen

./: README.md
examples/: CMakeLists.txt  ba_cpp_example.cpp  rdg2d_cpp_example.cpp  rdg3d_cpp_example.cpp  rgg2dM_cpp_example.cpp  rgg2d_cpp_example.cpp  rgg3d_cpp_example.cpp  rhg_cpp_example.cpp
kagen/: context.h  kagen.cpp  kagen.h  streaming.cpp  streaming.h
kagen/generators/: generator.h
kagen/generators/barabassi/: barabassi.cpp
kagen/generators/hyperbolic/: hyperbolic.cpp  hyperbolic.h
